New in spot 2.5.1.dev (not yet released)

  Nothing yet.

New in spot 2.5.1 (2018-02-20)

  Library:

  - iar() and iar_maybe() now also handle Streett-like conditions.

  Bugs fixed:

  - iar() and iar_maybe() properly handle Rabin-like conditions.

  - streett_to_generalized_buchi() could produce incorrect result on
    Streett-like input with acceptance like (Inf(0)|Fin(1))&Fin(1)
    where some Fin(x) is used both with and without a paired Fin(y).

  - is_generalized_rabin() had a typo that caused some non-simplified
    acceptance conditions like Fin(0)|(Fin(0)&Inf(1)) to be
    incorrectly detecteded as generalized-Rabin 2 0 1 and then output
    as Fin(0)|(Fin(1)&Inf(2)) instead.  Likewise for
    is_generalized_streett

  - the conversion from Rabin to Büchi was broken on Rabin-like
    acceptance condition where one pair used Fin(x) and another pair
    used Inf(x) with the same x.  Unfortunately, this situation could
    also occur as a side effect of simplifying the acceptance
    condition (by merging identical set) of some automaton prior to
    converting it to Büchi.

  - dnf_to_dca() was mishandling some Rabin-like input.

New in spot 2.5 (2018-01-20)

  Build:

  - We no longer distribute the doxygen-generated documentation in
    the tarball of Spot to save space.  This documentation is still
    available online at https://spot.lrde.epita.fr/doxygen/.  If you
    want to build a local copy you can configure Spot with
    --enable-doxygen, or simply run "cd doc && make doc".

  - All the images that illustrate the documentation have been
    converted to SVG, to save space and improve quality.

  Tools:

  - ltlsynt is a new tool for synthesizing a controller from LTL/PSL
    specifications.

  - ltlcross learned --reference=COMMANDFMT to specify a translator
    that should be trusted.  Doing so makes it possible to reduce the
    number of tests to be performed, as all other translators will be